--- a/examples/Attributes.ipynb
+++ b/examples/Attributes.ipynb
@@ -31,7 +31,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x2471cbba490>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x24efd7dc1f0>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -63,7 +63,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[AttributeOption(id=None, key='CURRENT_DATE', value='CURRENT_DATE')]"
+      "text/plain": "Attribute(type='date', id='attribute:2', name='Date')"
      },
      "execution_count": 4,
      "metadata": {},
@@ -84,10 +84,43 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[AttributeOption(id=None, key='CURRENT_DATE', value='CURRENT_DATE')]"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "attribute.options"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[Attribute(type='attribute', id='attribute:8', name='GHS Signal Words'),\n Attribute(type='attribute', id='attribute:10', name='Hazard Statements'),\n Attribute(type='attribute', id='attribute:11', name='GHS Hazards'),\n Attribute(type='attribute', id='attribute:14', name='Task Status'),\n Attribute(type='attribute', id='attribute:18', name='Inventory Security'),\n Attribute(type='attribute', id='attribute:9', name='Precautionary Statements'),\n Attribute(type='attribute', id='attribute:4', name='Material Library Type'),\n Attribute(type='attribute', id='attribute:24', name='HPLC Sample Type'),\n Attribute(type='attribute', id='attribute:26', name='newAttribute'),\n Attribute(type='attribute', id='attribute:20', name='My List Attribute 1 (SK)'),\n Attribute(type='attribute', id='attribute:28', name='test'),\n Attribute(type='attribute', id='attribute:17', name='Inventory Container Library'),\n Attribute(type='attribute', id='attribute:16', name='Inventory Location Library'),\n Attribute(type='attribute', id='attribute:32', name='test1'),\n Attribute(type='attribute', id='attribute:21', name='My Ext List Attribute 1 (SK)'),\n Attribute(type='attribute', id='attribute:40', name='test2'),\n Attribute(type='attribute', id='attribute:41', name='test3'),\n Attribute(type='attribute', id='attribute:42', name='test37'),\n Attribute(type='attribute', id='attribute:25', name='Primer. Forward or Reverse'),\n Attribute(type='attribute', id='attribute:44', name='test327'),\n Attribute(type='attribute', id='attribute:23', name='HPLC Method'),\n Attribute(type='attribute', id='attribute:19', name='My Number Sequence Attribute 1 (SK)'),\n Attribute(type='attribute', id='attribute:5', name='Product Id'),\n Attribute(type='attribute', id='attribute:6', name='Parallel Subexperiment Id'),\n Attribute(type='attribute', id='attribute:12', name='Sample Id'),\n Attribute(type='attribute', id='attribute:13', name='Task Id'),\n Attribute(type='attribute', id='attribute:15', name='Order Id')]"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "attributes = Attribute.get_list()\n",
-    "all_attributes = list(attributes)"
+    "all_attributes = list(attributes)\n",
+    "all_attributes"
    ],
    "metadata": {
     "collapsed": false,
@@ -99,12 +132,26 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SignalsNotebookError",
+     "evalue": "<SignalsNotebookError status=409 code=Conflict> title= detail=Failed to create entity  Conflict:{\"error\":409,\"description\":\"com.perkinelmer.elements.commons.exceptions.AttributeAlreadyExistsException: Attribute with name test327 already exists.\",\"causes\":[{\"description\":\"com.perkinelmer.elements.commons.exceptions.AttributeAlreadyExistsException: Attribute with name test327 already exists.\"}]}>",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mSignalsNotebookError\u001B[0m                      Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [7]\u001B[0m, in \u001B[0;36m<cell line: 4>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01msignals_notebook\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mattributes\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mattribute\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m AttributeOption\n\u001B[0;32m      3\u001B[0m option \u001B[38;5;241m=\u001B[39m AttributeOption(\u001B[38;5;28mid\u001B[39m\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m1\u001B[39m\u001B[38;5;124m'\u001B[39m, key\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mkey\u001B[39m\u001B[38;5;124m'\u001B[39m, value\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mvalue\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m----> 4\u001B[0m new_attribute \u001B[38;5;241m=\u001B[39m \u001B[43mAttribute\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcreate\u001B[49m\u001B[43m(\u001B[49m\u001B[43mname\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mtest327\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mtype\u001B[39;49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mchoice\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdescription\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mdescriptions\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43moptions\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m[\u001B[49m\u001B[43moption\u001B[49m\u001B[43m]\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32mC:\\coding\\pesn-python-sdk\\src\\signals_notebook\\attributes\\attribute.py:128\u001B[0m, in \u001B[0;36mAttribute.create\u001B[1;34m(cls, name, type, description, options)\u001B[0m\n\u001B[0;32m    124\u001B[0m api \u001B[38;5;241m=\u001B[39m SignalsNotebookApi\u001B[38;5;241m.\u001B[39mget_default_api()\n\u001B[0;32m    126\u001B[0m log\u001B[38;5;241m.\u001B[39mdebug(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mCreate Attribute: \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m...\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;28mcls\u001B[39m\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__name__\u001B[39m)\n\u001B[1;32m--> 128\u001B[0m response \u001B[38;5;241m=\u001B[39m \u001B[43mapi\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcall\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m    129\u001B[0m \u001B[43m    \u001B[49m\u001B[43mmethod\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mPOST\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[0;32m    130\u001B[0m \u001B[43m    \u001B[49m\u001B[43mpath\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mcls\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_get_endpoint\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    131\u001B[0m \u001B[43m    \u001B[49m\u001B[43mjson\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m{\u001B[49m\n\u001B[0;32m    132\u001B[0m \u001B[43m        \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mdata\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[43m{\u001B[49m\n\u001B[0;32m    133\u001B[0m \u001B[43m            \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mtype\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[43mObjectType\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mATTRIBUTE\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    134\u001B[0m \u001B[43m            \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mattributes\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[43m{\u001B[49m\n\u001B[0;32m    135\u001B[0m \u001B[43m                \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mname\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[43mname\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    136\u001B[0m \u001B[43m                \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mtype\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mtype\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[0;32m    137\u001B[0m \u001B[43m                \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mdescription\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[43mdescription\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    138\u001B[0m \u001B[43m                \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43moptions\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[43m[\u001B[49m\u001B[43moption\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mid\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43;01mfor\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[43moption\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;129;43;01min\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[43moptions\u001B[49m\u001B[43m]\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43;01mif\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[43moptions\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43;01melse\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[43m[\u001B[49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    139\u001B[0m \u001B[43m            \u001B[49m\u001B[43m}\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    140\u001B[0m \u001B[43m        \u001B[49m\u001B[43m}\u001B[49m\n\u001B[0;32m    141\u001B[0m \u001B[43m    \u001B[49m\u001B[43m}\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    142\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    143\u001B[0m log\u001B[38;5;241m.\u001B[39mdebug(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mAttribute: \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m was created.\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;28mcls\u001B[39m\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__name__\u001B[39m)\n\u001B[0;32m    145\u001B[0m result \u001B[38;5;241m=\u001B[39m AttributeResponse(\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mresponse\u001B[38;5;241m.\u001B[39mjson())\n",
+      "File \u001B[1;32mC:\\coding\\pesn-python-sdk\\src\\signals_notebook\\api.py:152\u001B[0m, in \u001B[0;36mSignalsNotebookApi.call\u001B[1;34m(self, method, path, params, data, json, headers)\u001B[0m\n\u001B[0;32m    146\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m response\u001B[38;5;241m.\u001B[39mok:\n\u001B[0;32m    147\u001B[0m     log\u001B[38;5;241m.\u001B[39merror(\n\u001B[0;32m    148\u001B[0m         \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mError has been occurred while getting response, status code: \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m'\u001B[39m,\n\u001B[0;32m    149\u001B[0m         response\u001B[38;5;241m.\u001B[39mstatus_code,\n\u001B[0;32m    150\u001B[0m         extra\u001B[38;5;241m=\u001B[39m{\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mresponse\u001B[39m\u001B[38;5;124m'\u001B[39m: response},\n\u001B[0;32m    151\u001B[0m     )\n\u001B[1;32m--> 152\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m SignalsNotebookError(response)\n\u001B[0;32m    153\u001B[0m log\u001B[38;5;241m.\u001B[39minfo(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mSuccessful request - HTTP url: \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m, status code: \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m'\u001B[39m, response\u001B[38;5;241m.\u001B[39murl, response\u001B[38;5;241m.\u001B[39mstatus_code)\n\u001B[0;32m    155\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m response\n",
+      "\u001B[1;31mSignalsNotebookError\u001B[0m: <SignalsNotebookError status=409 code=Conflict> title= detail=Failed to create entity  Conflict:{\"error\":409,\"description\":\"com.perkinelmer.elements.commons.exceptions.AttributeAlreadyExistsException: Attribute with name test327 already exists.\",\"causes\":[{\"description\":\"com.perkinelmer.elements.commons.exceptions.AttributeAlreadyExistsException: Attribute with name test327 already exists.\"}]}>"
+     ]
+    }
+   ],
    "source": [
     "from signals_notebook.attributes.attribute import AttributeOption\n",
     "\n",
     "option = AttributeOption(id='1', key='key', value='value')\n",
-    "new_attribute = Attribute.create(name='test3', type='choice', description='descriptions', options=[option])"
+    "new_attribute = Attribute.create(name='test327', type='choice', description='descriptions', options=[option])"
    ],
    "metadata": {
     "collapsed": false,
@@ -115,21 +162,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "\"Attribute\" object has no field \"options\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [8]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[0m new_attribute\u001B[38;5;241m.\u001B[39moptions \u001B[38;5;241m=\u001B[39m []\n\u001B[0;32m      2\u001B[0m new_attribute\u001B[38;5;241m.\u001B[39msave()\n",
-      "File \u001B[1;32mc:\\users\\andrey.shishkin\\pycharmprojects\\pesn-python-sdk\\venv\\lib\\site-packages\\pydantic\\main.py:357\u001B[0m, in \u001B[0;36mpydantic.main.BaseModel.__setattr__\u001B[1;34m()\u001B[0m\n",
-      "\u001B[1;31mValueError\u001B[0m: \"Attribute\" object has no field \"options\""
-     ]
-    }
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "new_attribute"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "new_attribute.options"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "new_attribute.options = []\n",
     "new_attribute.save()"
@@ -160,7 +222,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "attribute('WARNING')\n"
+    "attribute['CURRENT_DATE']"
    ],
    "metadata": {
     "collapsed": false,
@@ -174,8 +236,20 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "attribute('INCORRECT')"
+    "attribute['Invalid']"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
