--- a/examples/Attributes.ipynb
+++ b/examples/Attributes.ipynb
@@ -31,7 +31,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1d27d3c0130>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x188a01001f0>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -110,7 +110,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[Attribute(type='attribute', id='attribute:8', name='GHS Signal Words'),\n Attribute(type='attribute', id='attribute:10', name='Hazard Statements'),\n Attribute(type='attribute', id='attribute:11', name='GHS Hazards'),\n Attribute(type='attribute', id='attribute:14', name='Task Status'),\n Attribute(type='attribute', id='attribute:9', name='Precautionary Statements'),\n Attribute(type='attribute', id='attribute:4', name='Material Library Type'),\n Attribute(type='attribute', id='attribute:24', name='HPLC Sample Type'),\n Attribute(type='attribute', id='attribute:26', name='newAttribute'),\n Attribute(type='attribute', id='attribute:20', name='My List Attribute 1 (SK)'),\n Attribute(type='attribute', id='attribute:28', name='test'),\n Attribute(type='attribute', id='attribute:17', name='Inventory Container Library'),\n Attribute(type='attribute', id='attribute:16', name='Inventory Location Library'),\n Attribute(type='attribute', id='attribute:32', name='test1'),\n Attribute(type='attribute', id='attribute:21', name='My Ext List Attribute 1 (SK)'),\n Attribute(type='attribute', id='attribute:40', name='test2'),\n Attribute(type='attribute', id='attribute:41', name='test3'),\n Attribute(type='attribute', id='attribute:42', name='test37'),\n Attribute(type='attribute', id='attribute:25', name='Primer. Forward or Reverse'),\n Attribute(type='attribute', id='attribute:44', name='test327'),\n Attribute(type='attribute', id='attribute:18', name='Inventory Security'),\n Attribute(type='attribute', id='attribute:23', name='HPLC Method'),\n Attribute(type='attribute', id='attribute:19', name='My Number Sequence Attribute 1 (SK)'),\n Attribute(type='attribute', id='attribute:5', name='Product Id'),\n Attribute(type='attribute', id='attribute:6', name='Parallel Subexperiment Id'),\n Attribute(type='attribute', id='attribute:12', name='Sample Id'),\n Attribute(type='attribute', id='attribute:13', name='Task Id'),\n Attribute(type='attribute', id='attribute:15', name='Order Id')]"
+      "text/plain": "[Attribute(type='attribute', id='attribute:8', name='GHS Signal Words'),\n Attribute(type='attribute', id='attribute:10', name='Hazard Statements'),\n Attribute(type='attribute', id='attribute:11', name='GHS Hazards'),\n Attribute(type='attribute', id='attribute:14', name='Task Status'),\n Attribute(type='attribute', id='attribute:9', name='Precautionary Statements'),\n Attribute(type='attribute', id='attribute:4', name='Material Library Type'),\n Attribute(type='attribute', id='attribute:24', name='HPLC Sample Type'),\n Attribute(type='attribute', id='attribute:26', name='newAttribute'),\n Attribute(type='attribute', id='attribute:20', name='My List Attribute 1 (SK)'),\n Attribute(type='attribute', id='attribute:28', name='test'),\n Attribute(type='attribute', id='attribute:17', name='Inventory Container Library'),\n Attribute(type='attribute', id='attribute:16', name='Inventory Location Library'),\n Attribute(type='attribute', id='attribute:32', name='test1'),\n Attribute(type='attribute', id='attribute:21', name='My Ext List Attribute 1 (SK)'),\n Attribute(type='attribute', id='attribute:40', name='test2'),\n Attribute(type='attribute', id='attribute:41', name='test3'),\n Attribute(type='attribute', id='attribute:42', name='test37'),\n Attribute(type='attribute', id='attribute:25', name='Primer. Forward or Reverse'),\n Attribute(type='attribute', id='attribute:44', name='test327'),\n Attribute(type='attribute', id='attribute:23', name='HPLC Method'),\n Attribute(type='attribute', id='attribute:18', name='Inventory Security'),\n Attribute(type='attribute', id='attribute:19', name='My Number Sequence Attribute 1 (SK)'),\n Attribute(type='attribute', id='attribute:5', name='Product Id'),\n Attribute(type='attribute', id='attribute:6', name='Parallel Subexperiment Id'),\n Attribute(type='attribute', id='attribute:12', name='Sample Id'),\n Attribute(type='attribute', id='attribute:13', name='Task Id'),\n Attribute(type='attribute', id='attribute:15', name='Order Id')]"
      },
      "execution_count": 6,
      "metadata": {},
@@ -150,7 +150,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "Attribute(type='choice', id='attribute:46', name='test32733')"
+      "text/plain": "Attribute(type='choice', id='attribute:47', name='test32733')"
      },
      "execution_count": 8,
      "metadata": {},
@@ -193,9 +193,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['option', 'WARNING']"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "new_attribute.delete()"
+    "new_attribute.add_option('WARNING')\n",
+    "new_attribute.options"
    ],
    "metadata": {
     "collapsed": false,
@@ -210,7 +220,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "Attribute(type='choice', id='attribute:18', name='Inventory Security')"
+      "text/plain": "['option', 'IMPORTANT']"
      },
      "execution_count": 11,
      "metadata": {},
@@ -218,8 +228,8 @@
     }
    ],
    "source": [
-    "attribute = Attribute.get('attribute:18')\n",
-    "attribute"
+    "new_attribute.update_option('WARNING', 'IMPORTANT')\n",
+    "new_attribute.options"
    ],
    "metadata": {
     "collapsed": false,
@@ -230,19 +240,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
-      "text/plain": "['option2', 'option3']"
+      "text/plain": "['option']"
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "attribute.options"
+    "new_attribute.delete_option('IMPORTANT')\n",
+    "new_attribute.options"
    ],
    "metadata": {
     "collapsed": false,
@@ -253,68 +264,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "['option2', 'option3', 'WARNING']"
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 13,
+   "outputs": [],
    "source": [
-    "attribute.add_option('WARNING')\n",
-    "attribute.options"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "['option2', 'option3', 'IMPORTANT']"
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "attribute.update_option('WARNING', 'IMPORTANT')\n",
-    "attribute.options"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "['option2', 'option3']"
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "attribute.delete_option('IMPORTANT')\n",
-    "attribute.options"
+    "new_attribute.delete()"
    ],
    "metadata": {
     "collapsed": false,
